examples/whereami/whereami-frontend/app-repo/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whereami-frontend
  labels:
    istio.io/rev: asm-managed
