examples/whereami/whereami-frontend/app-repo/k8s/base/se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: whereami-backend
  namespace: whereami-frontend
spec:
  hosts:
  - whereami-backend.whereami-backend.svc.cluster.local
  ports:
  - name: whereami-backend
    number: 80
    protocol: TCP
  resolution: DNS
