examples/whereami/whereami-frontend/app-repo/k8s/base/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: whereami-frontend-virtualservice
    namespace: whereami-frontend
spec:
    hosts:
    - "whereami.endpoints.arch001.cloud.goog"
    gateways:
    - asm-ingress-gw/asm-ingressgateway
    http:
    - route:
      - destination:
          host: whereami-frontend
          port:
            number: 80
